# baby-tracker-exploration

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
baby_tracker_exploration/: console.py  explorator.ipynb  explorator.py
baby_tracker_exploration/data/: ExampleFile.csv
baby_tracker_exploration/data_pipeline/: data_preparation.py
baby_tracker_exploration/plots/: __init__.py  feeding_plots.py  widgets.py
tests/: test_console.py  test_explorator.py
