[tool.poetry]
name = "baby-tracker-exploration"
version = "0.1.0"
description = ""
authors = ["agouttes <adele.gouttes@zalando.de>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
